BXC-5492 refine query and fix tests